# nurbstools

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: conda.yml  pip.yml  wheels.yml
party/: CMakeLists.txt  opennurbs.cmake
party/opennurbs/: opennurbs_3dm_attributes.cpp  opennurbs_3dm_attributes.h  opennurbs_arccurve.cpp  opennurbs_archive.cpp  opennurbs_archive.h  opennurbs_archive_manifest.cpp  opennurbs_array.h  opennurbs_base64.h  opennurbs_bounding_box.h  opennurbs_brep.cpp  opennurbs_brep.h  opennurbs_curve.h  opennurbs_defines.h  opennurbs_dimensionstyle.cpp  opennurbs_dimensionstyle.h  opennurbs_embedded_file.cpp  opennurbs_extensions.cpp  opennurbs_extensions.h  opennurbs_file_utilities.h  opennurbs_font.cpp  opennurbs_font.h  opennurbs_freetype.cpp  opennurbs_glyph_outline.cpp  opennurbs_instance.cpp  opennurbs_instance.h  opennurbs_linecurve.h  opennurbs_linestyle.h  opennurbs_material.h  opennurbs_mesh.cpp  opennurbs_mesh.h  opennurbs_mesh_ngon.cpp  opennurbs_model_component.cpp  opennurbs_model_component.h  opennurbs_nurbscurve.cpp  opennurbs_nurbscurve.h  opennurbs_object.h  opennurbs_objref.h  opennurbs_parse.h  opennurbs_polycurve.h  opennurbs_polylinecurve.h  (+17 more)
party/opennurbs/android_uuid/: gen_uuid_nt.c
party/opennurbs/example_brep/: example_brep.cpp
party/opennurbs/example_gl/: example_gl.cpp
party/opennurbs/example_read/: example_read.cpp
party/opennurbs/example_userdata/: example_userdata.cpp
party/opennurbs/example_write/: example_write.cpp
src/: main.cpp
tests/: test_basic.py
(+47 files in other folders)
